--- a/kubernetes/multi-pod-deployment.yaml
+++ b/kubernetes/multi-pod-deployment.yaml
@@ -1,12 +1,7 @@
-apiVersion: v1
-kind: Pod
+apiVersion: v2
+kind: Deployment
 metadata:
-  name: web-from-file
-  # labels are important in k8s. In this case, we need the label to be able to refer to this pod from the
-  # 'kubectl expose' command (see README.md). Without this label, that won't work.
-  # Bottom-line: always label your pods!
-  labels:
-    mylabel: web-from-file
+  name: multi-pod-deployment
 spec:
   containers:
   - name: web
@@ -16,3 +11,8 @@ spec:
     imagePullPolicy: Never
     ports:
     - containerPort: 1234
+  - name: backend
+    image: backend
+    imagePullPolicy: Never
+    ports:
+    - containerPort: 50051
