--- a/kubernetes/complex-pod.yaml
+++ b/kubernetes/complex-pod.yaml
@@ -16,12 +16,21 @@ spec:
     imagePullPolicy: Never
     ports:
       - containerPort: 1234
+
+    ####################################################################################################################
+    # Environment variables
+    ####################################################################################################################
     env:
       - name: DEMO_GREETING
         value: "Hello from the environment"
       - name: DEMO_FAREWELL
         value: "Such a sweet sorrow"
+
+    ####################################################################################################################
+    # Resource Limits
+    ####################################################################################################################
     resources:
       limits:
         memory: "64Mi"
         cpu: "500m"
+      
