--- a/kubernetes/persistent-volumes/persistent-volume-claim-v1.yaml
+++ b/kubernetes/persistent-volumes/persistent-volume-claim-v1.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: myclaim
+  name: myclaim-v1
 spec:
   accessModes:
   - ReadWriteOnce
