--- a/kubernetes/persistent-volumes/persistent-volume.yaml
+++ b/kubernetes/persistent-volumes/persistent-volume.yaml
@@ -5,7 +5,7 @@ kind: PersistentVolume
 metadata:
   name: pv0001
 spec:
-  storageClassName: my-storage-class # You can just make this up, it's just a way to map PVCs to PVs.
+  storageClassName: my-storage-class # You can just pick the identifier here, it's just a way to map PVCs to PVs.
   accessModes:
     - ReadWriteOnce
   capacity:
