More k8s, a little bit of yang/netconf

--- a/grpc/web/Dockerfile
+++ b/grpc/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.8
 
-RUN apk add --no-cache git make musl-dev go
+RUN apk add --no-cache git make musl-dev go curl
 
 # Configure Go
 ENV GOROOT /usr/lib/go
