--- a/grpc/backend/Dockerfile
+++ b/grpc/backend/Dockerfile
@@ -6,6 +6,7 @@ RUN apk add --update \
     python-dev \
     py-pip \
     build-base \
+    curl \
     && pip install -U pip \
     && pip install virtualenv \
     && rm -rf /var/cache/apk/*
@@ -15,5 +16,7 @@ WORKDIR /app
 COPY . /app
 RUN virtualenv /env && /env/bin/pip install -r /app/requirements.txt
 
+
+ENV PYTHONUNBUFFERED 1
 EXPOSE 50051
 CMD ["/env/bin/python", "backend.py"]
